testsuite/poke.pkl/optcond-pre-diag-1.pk
/* { dg-do compile } */

type Foo = struct { if
             ("bar") /* { dg-error "invalid optional field expression.*\n.*" } */
  int i;
 };
